[gd_scene load_steps=2 format=3 uid="uid://c8kwehoq18q5v"]

[ext_resource type="Script" uid="uid://ps5suxlvs1ct" path="res://Inventory/Scripts/slot_interactions.gd" id="1_rcjje"]

[node name="SlotInteractions" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rcjje")

[node name="Interactions" type="VBoxContainer" parent="."]
z_index = 100
z_as_relative = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = -51.5
offset_right = 81.5
offset_bottom = 51.5
grow_horizontal = 2
grow_vertical = 2

[node name="EquipButton" type="Button" parent="Interactions"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "EQUIP
"

[node name="UseButton" type="Button" parent="Interactions"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "USE
"

[connection signal="pressed" from="Interactions/EquipButton" to="." method="_on_equip_button_pressed"]
[connection signal="pressed" from="Interactions/UseButton" to="." method="_on_use_button_pressed"]
